syntax = "proto3";
package core.solo.io;
option go_package = "github.com/solo-io/solo-kit/pkg/api/v1/resources/core";

// This file contains Options for Proto Messages/Fields/Enums for use with Solo-Kit

import "google/protobuf/descriptor.proto";

extend google.protobuf.MessageOptions {
    // options for a message that's intended to become a solo-kit resource
    ResourceOptions resource = 10000;
}

message ResourceOptions {
    // options for the kubernetes CRD based on this message
    CrdOptions crd = 1;
}

message CrdOptions {
    // becomes the kubernetes short name for the generated crd
    string short_name = 1;
    // becomes the kubernetes plural name for the generated crd
    string plural_name = 2;
    // becomes the resource scope in kubernetes, e.g. cluster or namespaced
    bool cluster_scoped = 4;
}

extend google.protobuf.FieldOptions {
    bool skip_hashing = 10000;
}
